# thrivaldi_examples

./: README.md
action_control_floorbot/: CMakeLists.txt  package.xml
action_control_floorbot/launch/: action_control_floorbot_example.launch
action_control_floorbot/scripts/: action_control_floorbot_client.py
callback_control_floorbot/: CMakeLists.txt  package.xml
callback_control_floorbot/launch/: callback_control_floorbot_example.launch
callback_control_floorbot/scripts/: callback_control_floorbot.py
clik_example_floorbot/: CMakeLists.txt  package.xml
clik_example_floorbot/launch/: clik_example_floorbot.launch
clik_example_floorbot/scripts/: clik_example_floorbot.py
message_control_floorbot/: CMakeLists.txt  message_control_floorbot_example.launch  package.xml
message_control_floorbot/launch/: message_control_floorbot_example.launch
message_control_floorbot/scripts/: message_control_floorbot.py
simple_joint_subscriber/: CMakeLists.txt  package.xml
simple_joint_subscriber/launch/: gazebo_example.launch
simple_joint_subscriber/scripts/: joint_subscriber.py  joint_subscriber_oo.py
thrivaldi_examples/: package.xml
