<?xml version="1.0"?>
<package format="2">
  <name>simple_joint_subscriber</name>
  <version>1.0.0</version>
  <description>Example of two ways of writing a simple joint subscriber</description>
  <maintainer email="mathias.arbo@ntnu.no">Mathias Hauan Arbo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://github.com/itk-thrivaldi/thrivaldi_examples</url>

  <author email="mathias.arbo@ntnu.no">Mathias Hauan Arbo</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export>
  </export>
</package>
